--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-circle-slider": "^1.6.2",
+    "react-circle-slider-temperature": "^1.6.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-nest-thermostat": "^1.0.8",
+    "react-scripts": "3.4.1",
+    "react-speech-recognition": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
